# polymarket-ipssi

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
data/parquet/polymarket/new_market/date=2026-01-14/: polymarket_ws_20260114_163358.parquet
data/parquet/polymarket/new_market/date=2026-01-15/: polymarket_ws_20260115_120842.parquet
data/parquet/polymarket/price_change/date=2026-01-14/: polymarket_ws_20260114_163358.parquet
data/parquet/polymarket/price_change/date=2026-01-15/: polymarket_ws_20260115_120842.parquet  polymarket_ws_20260115_121141.parquet  polymarket_ws_20260115_153423.parquet
data/parquet/polymarket/price_change/date=2026-01-16/: polymarket_ws_20260116_142056.parquet  polymarket_ws_20260116_142704.parquet  polymarket_ws_20260116_143040.parquet
data/parquet/polymarket/trade/date=2026-01-14/: polymarket_ws_20260114_163358.parquet
data/parquet/truthsocial/posts/date=2026-01-15/: truthsocial_realDonaldTrump_20260115_111701.parquet  truthsocial_realDonaldTrump_20260115_121142.parquet  truthsocial_realDonaldTrump_20260115_153425.parquet
data/raw/polymarket/date=2026-01-14/hour=16/: polymarket_ws_20260114_163358.jsonl
src/app/: streamlit_app.py  truthsocial_polymarket_combo.py:Zone.Identifier
src/ingestion/: polymarket_ws.py  truthsocial_api.py
src/loaders/: mongo_loader.py
src/processing/: raw_to_parquet_pm.py  raw_to_parquet_ts.py
truthSocial/: .env  __init__.py  api.py  example.py  output.json  trump_posts.json
websocket/: polymarket_data.json  polymarket_ws.py
(+17 files in other folders)
