[project]
name = "test-truth"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "curl-cffi>=0.13.0",
    "fastparquet>=2025.12.0",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "pymongo>=4.16.0",
    "python-dotenv>=1.0.0",
    "truthbrush",
    "websockets>=16.0",
    # Streamlit app dependencies
    "streamlit>=1.40.0",
    "matplotlib>=3.9.0",
    "wordcloud>=1.9.0",
    "vaderSentiment>=3.3.2",
    "scikit-learn>=1.5.0",
    "reportlab>=4.2.0",
]

[tool.uv.sources]
truthbrush = { git = "https://github.com/stanfordio/truthbrush" }
